--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
@@ -51,6 +53,8 @@
     "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
+    "resend": "^6.5.2",
+    "simple-icons": "^15.22.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
